Revert "- I fix section page overflow and css error, (#957)" (#965)
This reverts commit f21123797dca409ae86732008386a9fe676eba2f.

--- a/zc_frontend/src/pages/resources/card_component/Card.css
+++ b/zc_frontend/src/pages/resources/card_component/Card.css
@@ -19,16 +19,3 @@
   font-weight: 500;
   font-style: normal;
 }
-
-
-@media only screen and (max-width: 600px) {
-  .highlighted_text > p {
-    font-size: 16px;
-    margin-top:.5em;
-  }
-  .text > p {
-    font-size: 14px;
-    opacity: .6;
-    line-height: 27.3px;
-  }
-}
